--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.solovyev.android.checkout.app">
 
     <supports-screens android:smallScreens="true" />
@@ -31,5 +32,13 @@
     <supports-screens android:anyDensity="true" />
 
     <uses-permission android:name="com.android.vending.BILLING" />
+
+    <application
+        android:name=".CheckoutApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        tools:ignore="GoogleAppIndexingWarning" />
 
 </manifest>
