--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:support-v4:${versions.libs.support}"
+    compile "com.android.support:appcompat-v7:${versions.libs.support}"
+    compile "com.android.support:recyclerview-v7:${versions.libs.support}"
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile('ch.acra:acra:4.9.0') {
         exclude group: 'org.json'
     }
